FINALLY FIXED THE NAVBAR ANIMATIONS, used :not() to further specify and hid overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,13 +183,17 @@ h2.bannerText {
         width: 50%;
         margin-left: auto;
         margin-right: auto;
-        max-height: 0;
-        opacity: 0;
     }
     body:has(#toggleNavItem:checked) .navItems {
         transition: max-height 0.3s ease-out, opacity 0.25s ease-out;
         max-height: 50px;
         opacity: 1;
+    }
+    body:has(#toggleNavItem:not(:checked)) .navItems {
+        transition: max-height 0.3s ease-out, opacity 0.25s ease-out;
+        max-height: 0;
+        opacity: 0;
+        overflow: hidden;
     }
     .navHamburger {
         display: block;
